--- a/theme.css
+++ b/theme.css
@@ -163,3 +163,13 @@ body {
 	-webkit-transform: translateX(4px);
 	transform: translateX(4px);
 }
+
+/* input[type='file'] {
+	display: none;
+}
+.custom-file-upload {
+	border: 1px solid #ccc;
+	display: inline-block;
+	padding: 6px 12px;
+	cursor: pointer;
+} */
